# GraphicalModelsHomework

Homework 2/: main.py  run_all.fish  ve_output.txt
Homework 2/orders/: Grids_11.uai.min_degree  Grids_11.uai.min_fill  Grids_11.uai.mindegree  Grids_11.uai.minfill  Grids_12.uai.min_degree  Grids_12.uai.min_fill  Grids_12.uai.mindegree  Grids_12.uai.minfill  Grids_13.uai.min_degree  Grids_13.uai.min_fill  Grids_13.uai.mindegree  Grids_13.uai.minfill  Grids_16.uai.min_degree  Grids_16.uai.min_fill  Grids_16.uai.mindegree  Grids_16.uai.minfill  ObjectDetection_11.uai.min_degree  ObjectDetection_11.uai.min_fill  ObjectDetection_11.uai.mindegree  ObjectDetection_11.uai.minfill  ObjectDetection_12.uai.min_degree  ObjectDetection_12.uai.min_fill  ObjectDetection_12.uai.mindegree  ObjectDetection_12.uai.minfill  ObjectDetection_13.uai.min_degree  ObjectDetection_13.uai.min_fill  ObjectDetection_13.uai.mindegree  ObjectDetection_13.uai.minfill  ObjectDetection_14.uai.min_degree  ObjectDetection_14.uai.min_fill  ObjectDetection_14.uai.mindegree  ObjectDetection_14.uai.minfill  ObjectDetection_15.uai.min_degree  ObjectDetection_15.uai.min_fill  ObjectDetection_15.uai.mindegree  ObjectDetection_15.uai.minfill  Segmentation_11.uai.min_degree  Segmentation_11.uai.min_fill  Segmentation_11.uai.mindegree  Segmentation_11.uai.minfill  (+20 more)
Homework 2/ve_code/: ve
Homework 3/: runner.py  w_cutset.py
Homework 5/: .gitignore  Readme.txt  main.py  output_1.txt  output_2.old  output_2.txt  output_3.txt  run.py  runner.py
hw_5_rust/: .gitignore  Cargo.toml
hw_5_rust/src/: main.rs
(+147 files in other folders)
