[package]
name = "hw_5_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
humantime = "2.1.0"
indicatif = "0.17.7"
ndarray = { version = "0.15.1", features = ["rayon"] }
ndarray-rand = "0.14.0"
rayon = "1.8.1"
tracing = "0.1.40"
tracing-indicatif = "0.3.6"
tracing-subscriber = "0.3.18"

[features]
